--- a/코딩테스트 기본/자료구조.md
+++ b/코딩테스트 기본/자료구조.md
@@ -37,3 +37,26 @@
 - 내부적으로 배열을 이용하여 구현하는 리스트
 - 리스트 추상자료형에서 요구하는 연산자를 배열을 활용하여 구현
 - 배열의 장점인 임의접근이 핵심
+
+### 2. 연결 리스트
+- 리스트를 구현한 자료구조, 자료를 연결하여 관리하는 자료구조
+- 자료의 순서는  정해져 있으나 메모리에서의 연속성은 보장하지 않음.
+- 장점
+    - 차지할 메모리를 미리 할당할 필요가 없음.
+    -  자료의 추가/제거가 용이함.
+- 단점
+    - 자료간의 연결을 위한 추가 메모리가 필요함
+    - 원하는 인덱스의 자료를 찾는 접근 속도가 느림, 임의 접근 불가
+    - 배열 리스트에 비해 구현이 상대적으로 복잡함.
+- 구조
+    - 단반향 연결 리스트 : 자료의 값과 연결 정보를 가진 노드(node)로 구성
+    - 양방향 연결 리스트 : 양방향으로 노드를 연결하는 이중 연결 구조
+- 연결 리스트 연산자
+    - 비어있는 리스트 생성 연산자 : __init__()
+    - 비어있는지 확인 : is_empty()
+    - 앞에 개체 삽입 : pretend()
+    - 뒤에 개체 삽입 : append()
+    - 첫 머리를(head) 를 결정하는 연산자: set_head() (python slice)
+    - 주어진 인덱스의 접근 : access(), get()
+    - 주어진 인덱스에 삽입 : insert()
+    - 주어진 인덱스 요소 제거 : remove()
