--- a/코딩테스트 기본/자료구조.md
+++ b/코딩테스트 기본/자료구조.md
@@ -60,3 +60,20 @@
     - 주어진 인덱스의 접근 : access(), get()
     - 주어진 인덱스에 삽입 : insert()
     - 주어진 인덱스 요소 제거 : remove()
+
+### 3. 스택
+- 리스트와 달리 기능을 제한하는 추상자료형(ADT)
+- 후입 선출의 특성
+- 자료가 입력된 역순으로 처리되어야 할 떄 사용
+- 스택의 연산자
+    - push() : 자료를 top 위에 삽입하는 연산자
+    - pop() : 자료를 top 에서 꺼내는 연산자
+    - peek() : top에 있는 자료를 반환하지만, 삭제하지는 않는 연산자
+    - is_empty() : 스택이 비어있는지 확인하는 연산자
+- 스택의 구현
+    - 배열을 사용하므로, 크기가 정해져 있음.
+    - 메모리상 자료가 연속적이기 때문에 동작 속도가 빠름.
+- 오버플로우와 언더플로우
+    - 스택은 고속 동작을 위해 보통 배열로 구현
+    - 오버플로우 : 스택이 가득 차있을때 push 시(메모리 공간 부족)
+    - 언더플로우 : 스택이 비어있을 때 pop 시 (프로그램 버그)
