--- a/코딩테스트 기본/자료구조.md
+++ b/코딩테스트 기본/자료구조.md
@@ -77,3 +77,42 @@
     - 스택은 고속 동작을 위해 보통 배열로 구현
     - 오버플로우 : 스택이 가득 차있을때 push 시(메모리 공간 부족)
     - 언더플로우 : 스택이 비어있을 때 pop 시 (프로그램 버그)
+
+### 4. 큐(Queue)
+- 스택과 유사하게 기능을 제한하는 추상자료형(ADT)
+- 선입선출의 특성
+- 자료가 입력된 순서대로 처리되어야 할 떄 사용.
+- 큐의 연산자
+    - 큐는 자료를 넣는 곳, 빼는 곳이 따로 정해져 있음.(앞 : rear / 뒤 : front)
+    - put(), enqueue() : 자료를 rear 로 삽입하는 연산자
+    - get(), dequeue() : 자료를 front 에서 꺼내는 연산자
+    - peek() : front 에 있는 자료를 반환하지만, 삭제하지는 않는 연산자
+- 큐의 구현
+    - 선형 큐
+        - 배열을 이용하여 구현하는 가장 기본적인 큐
+        - 문제점 : 한번 사용한 메모리 공간이 버려짐 + 반드시 오버플로우가 발생하는 구조적 문제
+    - 환형 큐
+        - 선형 큐의 시작과 끝을 연결해서 메모리를 재활용함.
+        - 배열을 가득 채우기 전까지 오버플로우가 발생하지 않음.
+        - 자료를 빼는 속도보다 넣는 속도가 빠른 경우는 오버플로우가 발생됨.
+    - 연결 리스트 큐(실제 사용하는 큐의 형태)
+        - 연결 리스트를 이용해 큐 구현
+        - 구조적으로 메모리의 제약이 없음.
+
+### 5. 해싱(Hashing)
+- 해싱
+    - 넓은 범위의 값을 더 좁은 범위의 값으로 변환하는 기법
+    - 동일한 입력에 대해서 항상 동일한 출력을 보장
+- 해시 함수(Hash function)
+    - 해싱에 사용되는 함수로, 자주 사용되므로 빠른 동작이 요구됨.
+    - 해시 충돌(Hash collision) : 다른 입력이 동일한 출력을 가질 수 있음.
+    - python 에서 hash() 라는 내장 함수가 있음.
+
+- 해시 셋(Hash set)
+    - 해싱 기법을 이용하는 대표적인 자료구조
+    - 한정된 크기를 가지는 버킷(bucket -> 배열) 을 이용해 자료를 저장
+    - 자료를 저장하는 인덱스는 해시값(해시 함수의 출력)을 버킷의 크기로 나눈 나머지로 한다 (index = hash_value % bucket_size)
+    - 특징
+        - 파이썬에는 set 자료형으로 해시 셋 구성
+        - 자료의 중복 허용하지 않음. + 자료를 빠르게 탐색 가능
+        - 버킷이 가득 차면 버킷의 크기를 증가 + 재배치
