--- a/코딩테스트 기본/자료구조.md
+++ b/코딩테스트 기본/자료구조.md
@@ -116,3 +116,23 @@
         - 파이썬에는 set 자료형으로 해시 셋 구성
         - 자료의 중복 허용하지 않음. + 자료를 빠르게 탐색 가능
         - 버킷이 가득 차면 버킷의 크기를 증가 + 재배치
+
+- 해시 테이블(Hash table)
+    - 해시 셋과 유사하나, 해시를 계산하는 key와 짝을 이루는 valu를 함께 버킷에 저장하는 자료 구조
+    - 파이썬에서는 dict 의 형식으로 구현
+    - key는 중복이 허용되지 않고, value는 중복이 허용됨.
+    - 공간 복잡도를 희생하여 시간 복잡도를 낮추는 대표적인 자료구조(메모리를 많이 써서 빠른 가져오기가 가능)
+
+- 해시 충돌(Hash collision)
+    - 해시 함수가 서로 다른 입력에 대해 동일한 출력을 내는 경우
+    - 해시 충돌이 100% 발생할 경우, 탐색 성능은 O(1) 에서 O(N)으로 감소
+    - 해결 방법
+        - 개방 주소법(Open addressing, closed hashing)
+            - 버킷의 다른 index를 선택하여 자료를 저장하는 기법
+            - 더 이상 해시 충돌이 발생하지 않을 때까지 반복
+            - 종류
+                - 선형 탐사(Linear probing) : index 를 1씩 이동
+                - 이차 탐사(Quadratic probing) : index 를 1², 2² ~ 씩 이동
+                - 이중 해싱(Double hashing) : 별도의 해시 함수로 이동 간격을 계산(가장 성능이 좋음)
+        - 체이닝(Chaining)
+            - 해시 충돌이 발생할 경우 버킷에 자료를 연결 리스트로 추가해 나가는 기법
