--- a/코딩테스트 기본/자료구조.md
+++ b/코딩테스트 기본/자료구조.md
@@ -136,3 +136,64 @@
                 - 이중 해싱(Double hashing) : 별도의 해시 함수로 이동 간격을 계산(가장 성능이 좋음)
         - 체이닝(Chaining)
             - 해시 충돌이 발생할 경우 버킷에 자료를 연결 리스트로 추가해 나가는 기법
+
+## 비선형 자료구조
+### 1. 트리 이론
+- 트리
+    - 부모와 자식 관계로 이어진 노드의 집합으로 이루어진 구조
+    - 계층적 구조를 나타낼 때 주로 사용
+    - 구조
+        - 노드(node) : 트리 구조의 자료값을 담고 있는 단위
+        - 에지(edge) : 노드 간의 연결선(=link, branch)
+        - 루트 노드(Root) : 부모가 없는 노드, 가장 위의 노드
+        - 잎새 노드(Leaf) : 자식이 없는 노드(=단말)
+        - 내부 노드(Internal) : 잎새 노드를 제외한 모든 노드
+        - 부모(Parent) : 연결된 두 노드 중 상위 노드
+        - 자식(Child) : 연결된 두 노드 중 하위 노드
+        - 형제(Sibling) : 같은 부모를 가지는 노드
+        - 깊이(Depth) : 루트에서 어떤 노드까지의 간선의 수
+        - 레벨(Level) : 트리의 특정 깊이를 가지는 노드 집합
+        - 높이(Height) : 트리에서 가장 큰 레벨 값
+        - 크기(Size) : 자신을 포함한 자식 노드의 개수
+        - 차수(Degree) : 각 노드가 지닌 가지의 수
+        - 트리의 차수 : 트리의 최대 차수
+    - 특징
+        - 하나의 노드에서 다른 노드로 이동하는 경로는 유일
+        - 노드가 N 개인 트리의 간선의 수는 N-1
+        - Acyclic(서클이 존재하지 않음.)
+        - 모든 노드는 서로 연결되어 있음.
+        - 하나의 간선을 끊으면 2개의 부분트리(sub-tree) 로 분리됨.
+- 이진 트리
+    - 각 노드는 최대 2개의 자식을 가질 수 있음.
+    - 자식 노드는 좌우를 구분함(왼쪽 자식/오른쪽 자식, 두개 위치 바뀌면 다른 트리임.)
+    - 종류
+        - 포화 이진 트리(Perfect binary tree) : 모든 레벨에서 노드들이 꽉 채워져 있는 트리
+        - 완전 이진 트리(Complete binary tree) : 마지막 레벨을 제외하고 노드들이 모두 채워져 있는 트리
+        - 정 이진 트리(Full binary tree) : 모든 노드가 0개 또는 2개의 자식 노드를 갖는 트리
+        - 편향 트리(Skewed binary tree) : 한쪽으로 기울어진 트리(연결리스트와 동일)
+        - 균형 이진 트리(Balanced binary tree) : 모든 노드의 좌우 서브 트리 높이가 1 이상 차이 나지 않는 트리
+    - 특징
+        - 포화 이진 트리 높이가 h 일때, 노드의 수는 2ʰ⁺¹ -1개
+        - 포화(or 완전) 이진 트리의 노드가 N개 일때 높이는 𝒍𝒐𝒈₂N
+        - 이진 트리의 노드가 N개일 때, 최대 가능 높이는 N
+    - 순회(Traversal)
+        - 모든 노드를 빠뜨리거나 중복하지 않고 방문하는 연산
+        - 비선형 자료구조이기 때문에 다양한 순회 방법이 있다.
+        - 전위 순회, 대칭 순회, 후위 순회 - 재귀적 순회 방법
+        - 레벨 순회 - 레벨 별 순회 방법
+        - 전위 순회(Preorder traversal)
+            - 깊이 우선 순회(Depth first traversal)
+            - 방문 순서 : 현재 노드 - 왼쪽 노드 - 오른쪽 노드
+        - 대칭 순회
+            - 방문 순서 : 왼쪽 노드 - 현재 노드 - 오른쪽 노드
+        - 후위 순회(Postorder traversal)
+            - 방문 순서 : 왼쪽 노드 - 오른쪽 노드 - 현재 노드
+        - 레벨 순회(Level order traversal)
+            - 너비 우선 순회(Breadth first traversal)
+            - 방문 순서 : 위쪽 레벨부터 왼쪽 노드 -> 오른쪽 노드
+    - 완전 이진 트리의 구현
+        - 배열에 레벨 순회 순서대로 배열로 구현
+    - 일반적인 이진 트리의 구현
+        - Node 클래스를 이용하여 구현
+        - value, left, right 멤버 변수를 가지는 클래스
+        - Root node 를 멤버 변수로 가지는 클래스 Tree 로 구현
