--- a/코딩테스트 기본/자료구조.md
+++ b/코딩테스트 기본/자료구조.md
@@ -197,3 +197,34 @@
         - Node 클래스를 이용하여 구현
         - value, left, right 멤버 변수를 가지는 클래스
         - Root node 를 멤버 변수로 가지는 클래스 Tree 로 구현
+
+### 2. 힙 이론
+- 완전 이진 트리의 일종, 우선순위 큐(Priority queue)
+- 최소값 또는 최대값을 빠르게 찾아내는데 유용한 자료구조
+- 최소 힙(Min heap)
+    - 부모 노드의 value ≤ 자식 노드의 value 상태로 항상 정렬되어있는 자료 구조
+    - 동일한 자료에 대해서 여러 가지 최소 힙이 성립
+    - 직계 부모와의 관계에서만 성립, 레벨이 높을수록 값이 높음
+- 최대 힙(Max heap)
+    - 부모 노드의 value ≥ 자식 노드의 value 상태로 항상 정렬되어있는 자료 구조
+    - 동일한 자료에 대해서 여러가지 최대 힙이 성립
+- 최소 힙 - 삽입 프로세스
+    - 트리의 가장 끝 위치에 데이터 삽입
+    - 부모 노드와 비교한 후 작을 경우 부모 자리와 교체(반복)
+    - 높이 : log₂𝑵
+- 최소 힙 - 삭제 프로세스
+    - 최상위 노드 반환 및 삭제
+    - 가장 마지막 위치의 노드를 최상위 노드로 위치
+    - 자식 노드 중 작은 값과 비교 후 부모 노드가 더 크면 자리 교체(반복)
+
+- 장점
+    - 일반 배열에서 최대/최소 값 탐색 : O(N)
+    - 일반 배열에서 새로운 자료 추가 : O(1)
+
+    - 정렬 배열에서 최대/최소 값 탐색 : O(1)
+      (단, 정렬하는 연산 O(𝑵log𝑵)이 선행되어야 함.)
+    - 정렬 배열에서 새로운 자료 추가 : O(𝑵)
+
+    - 힙에서 최대/최고 값 탐색 : O(log𝑵)
+    - 힙에서 새로운 자료 추가 : O(log𝑵)
+    - 즉, 두 가지 연산에서 시간 복잡도가 낮음.
