--- a/코딩테스트 기본/자료구조.md
+++ b/코딩테스트 기본/자료구조.md
@@ -228,3 +228,57 @@
     - 힙에서 최대/최고 값 탐색 : O(log𝑵)
     - 힙에서 새로운 자료 추가 : O(log𝑵)
     - 즉, 두 가지 연산에서 시간 복잡도가 낮음.
+
+### 3. 그래프 이론
+
+- 객체 간에 짝을 이루는 가장 유연한 자료 구조
+- 정점(vertex, node, point, -> 객체) 과 이를 잇는 간선으로 구성
+- 간선은 무향 또는 유향일 수 있다.(방향성이 있을 수도 없을 수도 있음.)
+- 간선은 가중치가 있을 수 있고, 이는 연결의 강도 혹은 간선의 길이를 의미한다.
+- 구조
+    - 정점(Vertax) : 각 노드
+    - 간선(Edge) : 노드와 노드를 연결하는 선
+    - 인접 정점(Adjacent vertex) : 간선 하나를 두고 바로 연결된 정점
+    - 정점의 차수(Degree) : 무방향 그래프에서 하나의 정점에 인접한 정점의 수 또는 무방향 그래프 모든 정점 차수의 합(그래프 간선의 수 2배)
+    - 진입 차수(In-degree) : 방향 그래프에서 외부에서 오는 간선의 수
+    - 진출 차수(Out-degree) : 방향 그래프에서 외부로 나가는 간선의 수
+    - 경로 길이(Path length) : 경로를 구성하는데 사용된 간선의 수
+    - 단순 경로(Simple path) : 경로 중에서 반복되는 정점이 없는 경우
+    - 사이클(Cycle) : 단순 경로의 시작 정점과 끝 정점이 동일한 경우
+- 구현
+    - 인접 행렬(Adjacency matrix)
+        - 2차원 배열 이용
+        - 간선이 많을 때 사용
+        - 장단점
+            - 간선 정보의 확인과 업데이트가 빠름(O(1))
+            - 인접 행렬을 위한 메모리 공간 차지(O(N²))
+    - 인접 리스트(Adjacency list)
+        - 연결 리스트 이용
+        - 간선이 상대적으로 적을 때 사용
+        - 장단점
+            - 메모리를 상대적으로 적게 사용, 노드의 추가 및 삭제가 빠름
+            - 간선 정보 확인이 상대적으로 오래 걸림.
+- 종류
+    - 무방향 그래프(Undirected graph)
+        - 간선에 방향이 없는 그래프(양방향 이동 가능)
+        - A - B 표현 : `(A,B) = (B,A)`
+    - 방향 그래프(Directed graph)
+        - 간선에 방향이 있느 그래프(해당 방향으로만 이동 가능)
+        - A → B 표현 : `<A,B> ≠ <B,A>`
+    - 가중치 그래프(Weighted graph)
+        - 간선에 가중치가 있는 그래프(이동 비용 또는 연결 강도)
+        - 가중치 + 방향 그래프 같이 나올 수 있음.
+    - 완전 그래프(Complete graph)
+        - 모든 정점이 서로 연결되어 있는 그래프
+        - 정점이 N 개일 경우, 간선의 수는 ɴ𝐶₂(N(N-1)/2)
+- 탐색
+    - 깊이 우선 탐색(Depth first search; DFS)
+        - 사이클이 있기 때문에 돌아올 수 있음.
+        - visited 배열과 스택 또는 재귀적으로 구현(Preorder)
+    - 너비 우선 탐색(Breath first search; BFS)
+        - 큐로 구현
+        - visited 배열과 큐를 이용하여 구현
+        - 시작하는 vertax를 기준으로 거리가 적은 순서대로 돌아감.
+    - visited 배열에 들어있는 vertax를 보면서 탐색을 이어가는 형태!
+
+
