--- a/코딩테스트 기본/자료구조.md
+++ b/코딩테스트 기본/자료구조.md
@@ -281,4 +281,17 @@
         - 시작하는 vertax를 기준으로 거리가 적은 순서대로 돌아감.
     - visited 배열에 들어있는 vertax를 보면서 탐색을 이어가는 형태!
 
-
+### 4. 트라이(Trie) 이론
+- 검색 트리(Retrieval tree)
+- 문자열을 저장하고 빠르게 탐색하기 위한 자료 구조
+- 트라이를 구성하기 위한 별도의 메모리가 필요하나 매우 빠른 탐색이 가능
+-> 단순 문자열 탐색: O(MN), 트라이에서 탐색: O(M)(M:문자열 길이, N:문자열 개수)
+- 자료의 입력
+    - 각 노드는 문자열의 각 문자를 의미
+    - 루트 노드에서 시작해서, 문자열의 문자를 순서대로 자식 노드로 생성
+    - 기존 같은 문자를 가진 자식 노드가 있으면, 새 노드를 생성하지 않고 해당 노드 사용
+    - 모든 문자열의 입력이 끝나면, 마지막에 *(END) 입력
+- 자료의 탐색
+    - 루트 노드에서 시작해, 각 문자를 하나씩 자식 노드에서 찾아감.
+    - 자식 노드 중에 문자가 없으면 해당 문자열은 트라이에 존재하지 않음.
+    - 모든 문자를 탐색한 후, END 문자(*) 를 찾으면 해당 문자열은 트라이에 존재한다고 할 수 있음.
