--- a/코딩테스트 기본/알고리즘.md
+++ b/코딩테스트 기본/알고리즘.md
@@ -36,7 +36,7 @@ def fibonacci(n):
 def sum_all(x):
     if len(x) == 1: # 종료조건 1
         return x[0]
-        
+
     if len(x) == 0: # 종료조건 2
         return 0
     
@@ -44,3 +44,32 @@ def sum_all(x):
     
     return sum_all(x[:mid]) + sum_all(x[mid:])
 ```
+
+#### 재귀 호출의 한계
+- 여러 번 재귀 호출이 발생하는 경우, 기하급수적으로 호출 횟수가 증가
+    - 함수 호출 스택(Function call stack) 크기에 제한이 있어, 일정 횟수 이상 호출이 불가하다.
+- 실질적인 계산에 필요한 연산보다, 함수 호출에 의한 Overhead가 발생한다.
+
+#### 반복 구현
+- 종료 조건을 초기값(initial value)로 하며, Bottom-Up으로 구현
+```python
+def fibonacci(n):
+    fn_1, fn = 0,1 #초기값 설정
+    
+    if n == 0:
+        return fn_1
+    if n == 1:
+        return fn
+    
+    for i in range(2, n+1): # 반복문 구현
+        fn_1, fn = fn, fn_1+fn
+
+    return fn
+```
+
+#### Tail Recursion
+(파이썬 미지원)
+
+- 재귀 함수에서, 재귀 호출이 마지막에 단 한번 수행되는 것을 의미
+- 컴파일러에서 Tail Recursion 최적화를 지원하는 경우, 함수 호출 스택을 재활용
+- 컴파일러에서 최적화를 지원하지 않으면 적용 불가(Python 미지원)
