--- a/코딩테스트 기본/알고리즘.md
+++ b/코딩테스트 기본/알고리즘.md
@@ -73,3 +73,25 @@ def fibonacci(n):
 - 재귀 함수에서, 재귀 호출이 마지막에 단 한번 수행되는 것을 의미
 - 컴파일러에서 Tail Recursion 최적화를 지원하는 경우, 함수 호출 스택을 재활용
 - 컴파일러에서 최적화를 지원하지 않으면 적용 불가(Python 미지원)
+
+### 2. 정렬 알고리즘
+#### 정렬(Sorting)
+- 특정 값을 기준으로 데이터를 순서대로 배치하는 방법
+- 정렬 알고리즘 조건
+    - 정렬 알고리즘의 출력 :  입력을 재배열 하여 만든 순열
+    - 오름차순(이전 원소는 다음 원소보다 작지 않음)
+- 점근 표기법, 분할 정복 알고리즘(합병정렬/퀵정렬), 최악-최선-평균
+
+#### 정렬 알고리즘의 주요 구분
+- 제자리 알고리즘(In-place algorithm) : 알고리즘 수행에 메모리가 𝑂(㏒𝑁) 이하로 사용되는 알고리즘
+- 안정 알고리즘(Stable algorithm) : 정렬 기준이 동일한 값이 정렬 전후에 순서가 유지되는 알고리즘
+
+#### 다양한 정렬 알고리즘
+- 구현 난이도 쉬움, 속도 느림
+    - 버블 정렬, 삽입 정렬, 선택 정렬
+- 구현 난이도 조금 더 어려움, 속도 빠름
+    - 합병 정렬, 힙 정렬, 퀵 정렬, 트리 정렬
+- 하이브리드 정렬
+    - 팀정렬, 블록 병합 정렬, 인트로 정렬
+- 기타 정렬 알고리즘
+    - 기수 정렬, 카운팅 정렬, 셀 정렬, 보고 정렬
