--- a/코딩테스트 기본/알고리즘.md
+++ b/코딩테스트 기본/알고리즘.md
@@ -95,3 +95,61 @@ def fibonacci(n):
     - 팀정렬, 블록 병합 정렬, 인트로 정렬
 - 기타 정렬 알고리즘
     - 기수 정렬, 카운팅 정렬, 셀 정렬, 보고 정렬
+
+#### 버블 정렬(Bubble sort)
+- 인접한 두 원소를 검사하여 자리를 교체하는 단순한 정렬 알고리즘
+- 공간 복잡도 : 𝑂(1)
+- 시간 복잡도 : 최악 - 𝑂(𝑁²) 최선 - 𝑂(𝑁) 평균 - 𝑂(𝑁²)
+- #in-place, #Stable
+- 과정 : 연속된 2개 비교 -> 그 다음 2개 비교 -> ~~~
+- 구현
+```python
+def bubble_sort(x):
+    length = len(x) - 1
+    for i in range(length):
+        swapped = False
+        for j in range(length-i):
+            if x[j] > x[j+1]:
+                swapped = True
+                x[j], x[j+1] = x[j+1], x[j]
+            if swapped is False: # 이 조건이 있어야 최전의 경우 O(N) 으로 동작
+                break
+    return x
+```
+
+#### 삽입 정렬(Insertion sort)
+- 앞의 데이터를 정렬 해가면서 뒤쪽의 데이터를 적절한 위치에 삽입
+- 공간 복잡도 : 𝑂(1)
+- 시간 복잡도 : 최악 - 𝑂(𝑁²) 최선 - 𝑂(𝑁) 평균 - 𝑂(𝑁²)
+- #in-place, #Stable
+- 과정 : 맨 앞 데이터 정렬 가정, n-1 개 미정렬 -> 한개씩 순차적으로 정렬 진행
+- 구현
+```python
+def insertion_sort(x):
+    for i in range(1, len(x)): # 정렬된 영역이 1씩 증가
+        j = i - 1 # 0 ~ j 가 정렬된 영역
+        key = x[i] # x[i]를 왼쪽으로 한칸씩 옮기면서 제자리 찾기
+        while x[j] > key and j >= 0:
+            x[j+1] = x[j]
+            j = j - 1
+        x[j+1] = key
+    return x
+```
+
+#### 선택 정렬(Selection sort)
+- 최소값을 찾아서 맨 앞으로 정렬하는 방식
+- 공간 복잡도 : 𝑂(1)
+- 시간 복잡도 : 최악 - 𝑂(𝑁²) 최선 - 𝑂(𝑁²)(매번 찾아야 함) 평균 - 𝑂(𝑁²)
+- #in-place
+- 구현
+```python
+def selection_sort(x):
+    length = len(x)
+    for i in range(length-1):
+        index_min = i
+        for j in range(i+1, length):
+            if x[index_min] > x[j]:
+                index_min = j
+        x[i], x[index_min] = x[index_min], x[i]
+    return x
+```
