--- a/코딩테스트 기본/알고리즘.md
+++ b/코딩테스트 기본/알고리즘.md
@@ -153,3 +153,39 @@ def selection_sort(x):
         x[i], x[index_min] = x[index_min], x[i]
     return x
 ```
+
+#### 합병 정렬(Merge sort)
+- 배열의 길이가 1이 될 때 까지 이분할 하고, 인접한 배열끼리 합병하면서 정렬하는 알고리즘
+- 공간 복잡도 : 𝑂(𝑁)
+- 시간 복잡도 : 최악 - 𝑂(𝑁log𝑁) 최선 - 𝑂(𝑁log𝑁) 평균 - 𝑂(𝑁log𝑁)
+-  #Stable
+- 과정 : 데이터를 쪼갬 -> 계속 쪼갬(길이가 1인 배열까지) -> 그 위단으로 정렬(각각 정렬 되어있는 상태에서 비교 - 작은 값 정렬 후 인덱스 옮겨 비교 진행)
+- 구현
+```python
+def merge_sort(x, low = 0, high = -1, arr = None):
+    if arr is None:
+        arr = [0] * len(x) # 메모리를 미리 만듬
+
+    if high == -1:
+        high = len(x) - 1
+    
+    if low >= high: # 탈출 조건
+        return
+    
+    mid = (low + high) // 2
+    merge_sort(x, low, mid, arr)
+    merge_sort(x, mid + 1, high, arr)
+
+    i, j = low, mid + 1
+    for k in range(low, high+1):
+        if j > high:
+            arr[k] = x[i]
+            i += 1
+        elif i > mid:
+            arr[k] = x[j]
+            j += 1
+        else:
+            arr[k] = x[j]
+            j += 1
+    x[low:high+1] = arr[low:high+1]
+```
