--- a/코딩테스트 기본/알고리즘.md
+++ b/코딩테스트 기본/알고리즘.md
@@ -189,3 +189,49 @@ def merge_sort(x, low = 0, high = -1, arr = None):
             j += 1
     x[low:high+1] = arr[low:high+1]
 ```
+
+#### 퀵 정렬(Quick sort)
+- 임의의 값(pivot)을 정해, 그 값을 기준으로 좌우로 나누어 정렬하는 알고리즘. Pivot의 선택에 의해 알고리즘 성능이 크게 달라질 수 있음.
+- 공간 복잡도 : 𝑂(log𝑁)
+- 시간 복잡도 : 최악 - 𝑂(𝑁²) 최선 - 𝑂(𝑁log𝑁) 평균 - 𝑂(𝑁log𝑁)
+-  #In-place
+- 과정 : 임의의 값 -> 대소 2개 그룹으로 분할 -> 그룹 내 임의의 값 지정 -> ~~~
+- 구현
+```python
+# easy
+def quick_sort(x):
+    if len(x) <2 :
+        return x
+    left = []
+    right = []
+    pivot = x[len(x) // 2]
+
+    for el in x:
+        if el < pivot:
+            left.append(el)
+        else:
+            right.append(el)
+    return quick_sort(left) + [pivot] + quick_sort(right)
+
+# hard
+def quick_sort(arr):
+    def sort(low, high):
+        if high <= low:
+            return
+        mid = partition(low, high)
+        sort(low, mid-1)
+        sort(mid, high)
+
+    def partition(low, high):
+        pivot = arr[(low + high) // 2]
+        while low <= high:
+            while arr[low] < pivot:
+                low += 1
+            while arr[high] > pivot:
+                high -= 1
+            if low <= high:
+                arr[low], arr[high] = arr[high], arr[low]
+                low, high = low+1, high-1
+        return low
+    return sort(0, len(arr)-1)
+```
