--- a/코딩테스트 기본/알고리즘.md
+++ b/코딩테스트 기본/알고리즘.md
@@ -235,3 +235,19 @@ def quick_sort(arr):
         return low
     return sort(0, len(arr)-1)
 ```
+
+### 3. 이진 탐색
+#### 탐색 알고리즘(Search algorithms)
+- 자료구조에서 원하는 조건에 맞는 자료를 찾는 것
+- 선형 자료구조의 경우, 크게 세 가지 알고리즘이 있다.
+    - 정렬되지 않은 자료 → 선형 탐색 𝑂(𝑁)
+    - 정렬된 자료 → 이진 탐색 𝑂(log𝑁)
+    - 해싱된 자료 → 해시 탐색
+
+#### 선형 탐색 (Linear scarch)
+- 가장 단순한 탐색방법(= 순차 탐색(Sequential search))
+- 순서대로 하나씩 비교하기 때문에, 시간 복잡도는 𝑂(𝑁)
+
+#### 이진 탐색 (Binary search)
+- 정렬된 자료의 탐색에 최적화된 알고리즘(= 이분탐색)
+- 탐색 범위를 절반씩 줄여가기 때문에, 시간 복잡도는 𝑂(log𝑁)
