--- a/코딩테스트 기본/알고리즘.md
+++ b/코딩테스트 기본/알고리즘.md
@@ -251,3 +251,19 @@ def quick_sort(arr):
 #### 이진 탐색 (Binary search)
 - 정렬된 자료의 탐색에 최적화된 알고리즘(= 이분탐색)
 - 탐색 범위를 절반씩 줄여가기 때문에, 시간 복잡도는 𝑂(log𝑁)
+
+### 4. 투포인터(Two pointers)
+- 배열에서 두개의 포인터(인덱스)를 사용하여 원하는 결과를 얻는 방법
+
+- 두 개 포인터의 배치 방법
+    - 같은 방향에서 시작 : 첫 번쨰 원소에 둘다 배치
+    - 서로 다른 방향에서 시작 : 첫 번쨰 원소와 마지막 원소에 배치
+- 다중 for 문의 복잡도를 좀더 선형적으로 풀 수 있음
+    - ex) 범위를 다루는 이중 for 문(𝑂(𝑁²)) 을 𝑂(𝑁)으로 해결
+
+- 투 포인터 예시
+    - 아래 베열에서 부분합이 9가 되는 구간을 찾는 방법
+    - 기존 단순 for 문 이용 방법
+    - 125372432 -> i - 0 ~ N-1 , j - i ~ N-1
+    - 포인터가 같은부분에 있다가 부분합보다 작으면 하나가 올라가고 , 크면 다른 포인터가 올라가는 형식!
+- 알고리즘 시간 복잡도 : 𝑂(𝑁)
