--- a/코딩테스트 기본/알고리즘.md
+++ b/코딩테스트 기본/알고리즘.md
@@ -267,3 +267,29 @@ def quick_sort(arr):
     - 125372432 -> i - 0 ~ N-1 , j - i ~ N-1
     - 포인터가 같은부분에 있다가 부분합보다 작으면 하나가 올라가고 , 크면 다른 포인터가 올라가는 형식!
 - 알고리즘 시간 복잡도 : 𝑂(𝑁)
+
+### 5. 탐욕 알고리즘
+#### 탐욕 알고리즘(Greedy algorithms)
+- 매 순간 현재 기준으로 최선의 답을 선택해 나가는 기법
+	- 빠르게 근사치를 계산할 수 있다.
+	- 결과적으로 최적해가 아닐 수 있음.
+- 탐욕 알고리즘의 결과가 최적해 인 경우를 알아야 함.
+
+#### 활동 선택 문제(Activity selection problem)
+- N개의 활동과 각 활동의 시작/종료 시간이 주어졌을 때, 한 사람이 최대한 많이 할 수 있는 활동의 수 구하기
+- 활동을 종료 시간 기준으로 오름차순 정렬
+- 먼저 종료되는 활동부터 그리디하게 선택 → 문제 조건에 따라 시간이 겹치는 경우 제외
+
+#### 거스름돈 문제
+- 동전의 개수가 가장 적게 거스름돈을 돌려주는 문제
+- 잔돈 : 890원 / 동전 종료 : 10,50,100,500 → 큰 동전부터 개수 계산
+- 동전의 종류가 배수로 증가자히 않을 경우, 그리디 알고리즘이 최적해가 아닐 수 있음
+	- → 동적계획법으로 해결
+	
+#### 그리디 알고리즘 최적해 조건
+- 그리디 알고리즘은 빠르지만 최적해를 보장하지는 못함
+- 아래 두 가지 조건에 해당하는 경우 적용 가능
+	- 탐욕적 선택 특성(Greedy choice property)
+		: 지금 선택이 다음 선택에 영향을 주지 않음.
+	- 최적 부분 구조(Optimal substructure)
+		: 전체 문제의 최적해는 부분 문제의 최적해로 이루어짐.
