--- a/코딩테스트 기본/알고리즘.md
+++ b/코딩테스트 기본/알고리즘.md
@@ -293,3 +293,30 @@ def quick_sort(arr):
 		: 지금 선택이 다음 선택에 영향을 주지 않음.
 	- 최적 부분 구조(Optimal substructure)
 		: 전체 문제의 최적해는 부분 문제의 최적해로 이루어짐.
+
+### 6. 분할 정복 이론
+#### 분할 정복(Divide and conquer)
+- 큰 문제를 작은 부분 문제로 나누어 해결하는 방법
+	- 합병정렬, 퀵정렬, 이진 탐색 
+- 분할 정복 과정
+	1. 문제를 하나 이상의 부분 문제(sub-problem)로 ㅂㅜㄴ할
+	2. 부분 문제를 각각 해결
+	3. 부분 문제의 해답을 통합하여 원래 문제를 해결
+- 장점
+	- 문제를 나누어 처리해 어려운 문제 해결 가능
+	- 병렬 처리에 적합한 계산 구조
+- 단점
+	- 메모리를 많이 사용(재귀 호출 구조)
+- 예시
+	- 최대값 찾기 : 구간을 mid 기준 계속 분할 → 길이가 1인 배열에서 두개씩 비교해서 최대값 찾기
+	```python
+	def get_max(arr, left, right):
+		if left == right:
+			return arr[left]
+		
+		mid = (left + right) // 2
+		left = get_max(arr, left, mid)
+		right = get_max(arr, mid+1, right)
+		
+		return left if left > right else right
+	```
