devide_and_conquer_2

--- a/코딩테스트 기본/알고리즘.md
+++ b/코딩테스트 기본/알고리즘.md
@@ -299,7 +299,7 @@ def quick_sort(arr):
 - 큰 문제를 작은 부분 문제로 나누어 해결하는 방법
 	- 합병정렬, 퀵정렬, 이진 탐색 
 - 분할 정복 과정
-	1. 문제를 하나 이상의 부분 문제(sub-problem)로 ㅂㅜㄴ할
+	1. 문제를 하나 이상의 부분 문제(sub-problem)로 분할
 	2. 부분 문제를 각각 해결
 	3. 부분 문제의 해답을 통합하여 원래 문제를 해결
 - 장점
