--- a/코딩테스트 기본/알고리즘.md
+++ b/코딩테스트 기본/알고리즘.md
@@ -320,3 +320,53 @@ def quick_sort(arr):
 		
 		return left if left > right else right
 	```
+
+## 심화 알고리즘
+### 1. 동적 계획법(Dynamic Programming)
+- 큰 부분을 부분 문제로 나눈 후 답을 찾아가는 과정에서, 계산된 결과를 기록하고 재활용하며 문제의 답을 구하는 방식
+- 중간 계산 결과를 기록하기 위한 메모리가 필요
+- 한 번 계산한 부분을 다시 계산하지 않아 속도가 빠름
+
+- 분할 정복과의 차이
+    - 분할 정복은 부분 문제가 중복되지 않음.
+    - DP 는 부분 문제가 중복되어 재활용에  사용
+- 그리디 알고리즘과의 차이
+    - 그리디 알고리즘은 순간의 최선을 구하는 방식 -> 특정 조건에서만 최적해
+    - DP 는 모든 방법을 확인 후 최적해 구하는 방식 -> 항상 최적해 보장
+
+- 분류
+    - 타뷸레이션(Tabulation, tabularization)
+        - Bottom-Up 접근
+        - 작은 하위 문제부터 풀면서 올라감
+        - 모두 계산하면서 차례대로 진행
+        - 단점 : 필요없는 연산을 함.
+    - 메모이제이션(Memoization)
+        - Top-Down 접근
+        - 큰 문제에서 하위 문제를 확인해가며 진행
+        - 계산이 필요한 순간 계산하며 진행
+
+- 예시
+    - 피보나치 수열(Top-Down)
+        ```python
+        fibo = dict()
+        fibo[0] = 0 # 재귀 종료조건 / 반복 초기값
+        fibo[1] = 1
+
+        def fibonacci(n):
+            if n in fibo:
+                return fibo[n]
+            res = fibonacci(n-1) + fibonacci(n-2)
+            fibo[n] = res
+            return res
+        ```
+    - 피보나치 수열(Bottom-Up)
+        ```python
+        def fibonacci(n):
+            fibo = [None] * (n + 1)
+            fibo[0], fibo[1] = 0, 1
+
+            for i in range(2, n + 1):
+                fibo[i] = fibo[i - 1] + fibo[i - 2]
+            
+            return fibo[n]
+        ```
