--- a/코딩테스트 기본/알고리즘.md
+++ b/코딩테스트 기본/알고리즘.md
@@ -370,3 +370,15 @@ def quick_sort(arr):
             
             return fibo[n]
         ```
+
+### 2. 백 트래킹(Backtracking)
+- 트리의 모든 노드를 탐색하는 과정(DFS)에서, 유망하지 않은 쪽은 더이상 탐색하지 않는 방법
+
+- 용어
+    - 유망함(Promising) : 해가 될 가능성이 있는 경우 유망하다고 함.
+    - 가지치기(Pruning) : 해가 될 가능성이 없는 경우 해당 노드와 그 자식 노드를 재외하는 것
+    - 백트래킹(Backtracking) : 유망하지 않은 쪽으로 가지 않고 부모 노드로 되돌아 오는 것
+
+- N-Queen
+    - N x N 체스판에 N개의 퀸이 서로 위협적이지 않게 배치하는 경우의 수 문제
+    - N개를 모두 배치하기 전에 하나씩 배치하면서 유망하지 않은 경우의 수 배제
