--- a/코딩테스트 기본/알고리즘.md
+++ b/코딩테스트 기본/알고리즘.md
@@ -382,3 +382,11 @@ def quick_sort(arr):
 - N-Queen
     - N x N 체스판에 N개의 퀸이 서로 위협적이지 않게 배치하는 경우의 수 문제
     - N개를 모두 배치하기 전에 하나씩 배치하면서 유망하지 않은 경우의 수 배제
+
+### 3. 최단 경로 알고리즘
+#### Dijkstra 알고리즘
+- 출발점에서 모든 노드로의 최단 경로를 구하는 알고리즘.
+- 간선에 음의 가중치가 없어야 함.
+- 탐욕 알고리즘과 DP 를 결합한 알고리즘
+- 알고리즘 시간 복잡도 : O(𝐸 ㏒ V)
+- 노드와 간선 가중치 정보가 있을 때, A 노드에서 다른 노드들에 대한 최단 경로 구하기
