--- a/코딩테스트 기본/알고리즘.md
+++ b/코딩테스트 기본/알고리즘.md
@@ -390,3 +390,43 @@ def quick_sort(arr):
 - 탐욕 알고리즘과 DP 를 결합한 알고리즘
 - 알고리즘 시간 복잡도 : O(𝐸 ㏒ V)
 - 노드와 간선 가중치 정보가 있을 때, A 노드에서 다른 노드들에 대한 최단 경로 구하기
+
+### 4. 최소 신장 트리
+- Minimum Spanning Tree(MST)
+- 그래프의 모든 노드를 최소 가중치 합으로 연결한 부분 트리
+    - 부분트리 이므로, 회로(Cycle) 가 존재해서는 안된다(Acyclic)
+
+#### 크루스칼 메소드(Kruskal's Method)
+- 모든 간선을 가중치를 기준으로 오름차순 정렬(O(𝐸 ㏒ 𝐸))
+    - 모든 간선을 정렬하는 과정 떄문에, 간선의 수가 적을 떄 사용
+- 작은 가중치의 간선부터 하나씩 선택하여 MST 를 구성한다.
+    - 이 과정에서 사이클을 형성하는 간선은 선택하지 않는다.
+    - 사이클 형성을 판단하는 알고리즘은 Union-Find 알고리즘 사용
+
+#### 유니온-파인드(Union-Find)
+- 트리 형식으로 집합을 만들고 연산하는 알고리즘
+    - 유니온(Union) : 두 집합의 합집합을 계산하는 연산
+    - 파인드(Find) : 한 원소가 속한 집합을 알아내는 연산(트리에서 루트 노드를 알아내는 연산)
+
+- 크루스칼 방법과 유니온-파인드 알고리즘
+    - 초기에 개별 노드가 크기가 1인 집합을 이룬다.
+    - MST 에 노드를 하나 추가할 때마다 해당 노드를 유니온 연산 한다.
+    - 노드를 추가 할 때마다 파인드 연산으로 같은 집합의 원소인지 확인(사이클이 발생하는지 확인) 한다.
+
+#### 유니온 알고리즘
+- 각 노드는 부모 노드를 parents 배열에 기록한다.
+    - 루트 노드는 자기 자신을 부모 노드로 가진다.
+- Union : 두 집합 중 하나의 루트 노드를 다른 루트 노드의 부모로 한다.
+
+#### Union-By-Rank
+- 유니온 이후 집합의 트리의 깊이를 최소한으로 유지하는 방법
+    - 랭크가 더 높은 집합이 루트가 되게 한다.
+    - 랭크가 같을 경우 아무거나 선택하고, 랭크가 1 증가한다.
+
+#### 파인드 알고리즘
+- 어떤 노드를 찾으면, 해당 집합의 루트 노드를 반환
+- 재귀적으로 동작하여 자기 자신이 부모일 때까지 동작
+
+#### 경로 단축(Path Compression)
+- Find 과정에 참여한 모든 노드의 부모를 루트 노드로 변경
+    - 한번 Find를 동작시키면 여러 노드의 Find 가 O(1)로 동작
