--- a/코딩테스트 기본/알고리즘.md
+++ b/코딩테스트 기본/알고리즘.md
@@ -430,3 +430,9 @@ def quick_sort(arr):
 #### 경로 단축(Path Compression)
 - Find 과정에 참여한 모든 노드의 부모를 루트 노드로 변경
     - 한번 Find를 동작시키면 여러 노드의 Find 가 O(1)로 동작
+
+#### 프림 메소드(Prim's method)
+- 임의의 노드에서 시작하여 하나씩 노드를 연결하는 방식
+- 연결된 모든 노드의 간선 중 가장 낮은 가중치의 간선을 선택(합으로 최적화)
+- 간선의 개수가 많을 경우 크루스칼 메소드보다 유리
+- 시간 복잡도 : O(𝐸 ㏒ V)
